# shui

./: .gitignore  README.md  pyproject.toml  shifl.py
.github/workflows/: check-code-formatting.yaml  check-code-style.yaml  test-coverage.yaml  test-functionality.yaml
.mypy/stubs/cleo/: __init__.pyi  application.pyi  parser.pyi
.mypy/stubs/cleo/commands/: base_command.pyi  command.pyi
.mypy/stubs/cleo/io/: __init__.pyi  buffered_io.pyi  console_io.pyi  io_mixin.pyi
.mypy/stubs/tqdm/: __init__.pyi  std.pyi
.mypy/stubs/url_normalize/: __init__.pyi  tools.pyi  url_normalize.pyi
shifl/: main.py  version.py
shifl/api/: __init__.py  install.py  remote.py
shifl/commands/: __init__.py  install_command.py  versions_command.py
shui/: __init__.py  cli.py  version.py
shui/api/: __init__.py  download.py  install.py  remote.py  versions.py
shui/classes/: file_with_hash.py  fileinfo.py  version.py
shui/commands/: install_command.py  versions_command.py
shui/functions/: __init__.py  download.py  file_details.py  install.py  response.py  versions.py
shui/models/: fileinfo.py
tests/classes/: test_file_with_hash.py  test_fileinfo.py  test_version.py
tests/commands/: test_all.py
tests/fixtures/: example.tgz  example.tgz.sha512  spark_350.html  spark_351.html  spark_main.html
tests/functions/: test_file_details.py  test_install.py
